--- a/authapp/.env
+++ b/authapp/.env
@@ -1,3 +1,3 @@
-MONGO_URI = abc
+MONGO_URI = mongodb+srv://Asus:$UM!T376@cluster0.vvhlsc0.mongodb.net/
 TOKEN_SECRET = sclass
 DOMAIN = http://localhost:3000
